<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.robotframework.ide</groupId>
	<artifactId>org.robotframework.ide.core-functions</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Robotframework IDE Core Functions</name>
	<description>It is base functions for Robot Framework IDE - it is not depend from view part - can be adopt to any kind of editor, which will handle in MVC - view responsibility.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<jdk.version>1.8</jdk.version>
		<skip.unit.tests>false</skip.unit.tests>
		<skip.py.unit.tests>false</skip.py.unit.tests>
		<skip.py3.unit.tests>true</skip.py3.unit.tests>
		<skip.jy.unit.tests>true</skip.jy.unit.tests>
	</properties>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.13</version>
				<inherited>true</inherited>
				<reportSets>
					<reportSet>
						<reports>
							<report>report-only</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.8</version>
				<configuration>
					<targetJdk>${jdk.version}</targetJdk>
					<rulesets>
						<ruleset>../../PMD/pegasus-pmd.xml</ruleset>
					</rulesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<configLocation>../../Checkstyle/checkstyle-configuration.xml</configLocation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>3.1.0-RC7</version>
				<configuration>
					<onlyAnalyze>org.rf.-,org.robotframework.-</onlyAnalyze>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.6.201602180812</version>
			</plugin>
		</plugins>
	</reporting>

	<build>
		<defaultGoal>package</defaultGoal>
		<resources>
			<resource>
				<directory>${basedir}/src/main/java</directory>
				<includes>
					<include>log4j.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
			<resource>
				<directory>${basedir}/src/main/python</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${mainClass}</mainClass>
								</transformer>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<!--Main-Class>${mainClass}</Main-Class -->
										<Implementation-Product>${project.artifactId}</Implementation-Product>
										<Implementation-Version>${project.version}</Implementation-Version>
										<!--Implementation-Revision>${buildRevision}</Implementation-Revision -->
										<!-- Implementation-ScmBranch>${scmBranch}</Implementation-ScmBranch -->
									</manifestEntries>
								</transformer>
							</transformers>
							<artifactSet>
								<excludes>
									<exclude>classworlds:classworlds</exclude>
									<exclude>junit:junit</exclude>
									<exclude>jmock:*</exclude>
									<exclude>*:xml-apis</exclude>
									<exclude>org.apache.maven:lib:tests</exclude>
									<exclude>javax.xml.bind:activation</exclude>
									<exclude>org.assertj:assertj-core</exclude>
									<exclude>org.hamcrest:hamcrest-core</exclude>
								</excludes>
							</artifactSet>
							<minimizeJar>true</minimizeJar>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.plexus</groupId>
						<artifactId>plexus-utils</artifactId>
						<version>3.0.24</version>
					</dependency>
				</dependencies>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<compilerArguments>
						<endorseddirs>${endorsed.dir}</endorseddirs>
					</compilerArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<outputDirectory>${endorsed.dir}</outputDirectory>
							<silent>true</silent>
							<artifactItems>
								<artifactItem>
									<groupId>org.apache.commons</groupId>
									<artifactId>commons-exec</artifactId>
									<version>1.3</version>
								</artifactItem>
								<artifactItem>
									<groupId>org.slf4j</groupId>
									<artifactId>slf4j-api</artifactId>
									<version>1.7.5</version>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14.1</version>
				<inherited>true</inherited>
				<configuration>
					<forkMode>once</forkMode>
					<reportFormat>xml</reportFormat>
					<argline>-Djava.endorsed.dirs="${endorsed.dir}"</argline>
					<skipTests>${skip.unit.tests}</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>generate-test-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/pyunit</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/src/main/python</directory>
								</resource>
								<resource>
									<directory>${basedir}/src/test/python</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.5.0</version>
				<executions>
					<execution>
						<configuration>
							<executable>python</executable>
							<workingDirectory>${basedir}/target/pyunit</workingDirectory>
							<arguments>
								<argument>-m</argument>
								<argument>unittest_red</argument>
								<argument>discover</argument>
								<argument>${basedir}/target/pyunit/scripts</argument>
							</arguments>
							<environmentVariables />
							<skip>${skip.py.unit.tests}</skip>
						</configuration>
						<id>python-test</id>
						<phase>test</phase>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
					<execution>
						<configuration>
							<executable>python3</executable>
							<workingDirectory>${basedir}/target/pyunit</workingDirectory>
							<arguments>
								<argument>-m</argument>
								<argument>unittest_red</argument>
								<argument>discover</argument>
								<argument>${basedir}/target/pyunit/scripts</argument>
							</arguments>
							<environmentVariables />
							<skip>${skip.py3.unit.tests}</skip>
						</configuration>
						<id>python3-test</id>
						<phase>test</phase>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
					<execution>
						<configuration>
							<executable>jython</executable>
							<workingDirectory>${basedir}/target/pyunit</workingDirectory>
							<arguments>
								<argument>-m</argument>
								<argument>unittest_red</argument>
								<argument>discover</argument>
								<argument>${basedir}/target/pyunit/scripts</argument>
							</arguments>
							<environmentVariables />
							<skip>${skip.jy.unit.tests}</skip>
						</configuration>
						<id>jython-test</id>
						<phase>test</phase>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.6.201602180812</version>
				<configuration>
					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>site</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.3</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.doxia</groupId>
							<artifactId>doxia-module-apt</artifactId>
							<version>1.4</version>
						</dependency>
					</dependencies>
					<configuration>
						<inputEncoding>UTF-8</inputEncoding>
						<outputEncoding>UTF-8</outputEncoding>
						<locales>en</locales>
					</configuration>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[2.1,)
										</versionRange>
										<goals>
											<goal>copy</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute></execute>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<finalName>${project.artifactId}-${project.version}</finalName>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.8.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.7.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.objenesis</groupId>
			<artifactId>objenesis</artifactId>
			<version>2.5.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>1.6.8</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy-agent</artifactId>
			<version>1.6.8</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.22</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>22.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlrpc</groupId>
			<artifactId>xmlrpc-client</artifactId>
			<version>3.1.3</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>4.2.2</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna-platform</artifactId>
			<version>4.2.2</version>
		</dependency>
	</dependencies>
</project>